# stash

./: .envrc  .gitignore  .taplo.toml  Cargo.toml  README.md  build.rs  flake.nix
.github/: dependabot.yaml
.github/workflows/: nix-cache.yaml  release.yaml  rust.yml
contrib/: stash.service
nix/: package.nix  shell.nix
nix/modules/: nixos.nix
src/: hash.rs  import.rs  main.rs  mime.rs  multicall.rs
src/clipboard/: mod.rs  persist.rs
src/commands/: decode.rs  delete.rs  import.rs  list.rs  mod.rs  query.rs  store.rs  watch.rs  wipe.rs
src/db/: mod.rs  nonblocking.rs
src/multicall/: mod.rs  wl_copy.rs  wl_paste.rs
src/wayland/: mod.rs
