[package]
name = "stash"
version = "0.2.4"
edition = "2024"
authors = ["NotAShelf <raf@notashelf.dev>"]
license = "MPL-2.0"
readme = true
repository = "https://github.com/notashelf/stash"
rust-version = "1.85"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
dirs = "6.0.0"
imagesize = "0.14.0"
inquire = { default-features = false, version = "0.7.5", features = [
    "crossterm",
] }
log = "0.4.27"
env_logger = "0.11.8"
thiserror = "2.0.14"
wl-clipboard-rs = "0.9.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
smol = "2.0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
base64 = "0.22.1"
regex = "1.11.1"
ratatui = "0.29.0"
crossterm = "0.29.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"

[profile.release]
lto = true
opt-level = "z"
strip = true
