[package]
name = "stash-clipboard"
description = "Wayland clipboard manager with fast persistent history and multi-media support"
version = "0.3.2"
edition = "2024"
authors = ["NotAShelf <raf@notashelf.dev>"]
license = "MPL-2.0"
readme = true
repository = "https://github.com/notashelf/stash"
rust-version = "1.85"

[[bin]]
name = "stash"             # actual binary name for Nix, Cargo, etc.
path = "src/main.rs"

[features]
default = ["use-toplevel", "notifications"]
use-toplevel = ["dep:wayland-client", "dep:wayland-protocols", "dep:wayland-protocols-wlr"]
notifications = ["dep:notify-rust"]

[dependencies]
clap = { version = "4.5.48", features = ["derive", "env"] }
clap-verbosity-flag = "3.0.4"
dirs = "6.0.0"
imagesize = "0.14.0"
inquire = { default-features = false, version = "0.9.1", features = [
    "crossterm",
] }
log = "0.4.28"
env_logger = "0.11.8"
thiserror = "2.0.17"
libc = "0.2"
wl-clipboard-rs = "0.9.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
smol = "2.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
base64 = "0.22.1"
regex = "1.11.3"
ratatui = "0.29.0"
crossterm = "0.29.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0" # FIXME: held back by ratatui
wayland-client = { version = "0.31.11", optional = true }
wayland-protocols = { version = "0.32.0", optional = true }
wayland-protocols-wlr = { version = "0.3.9", optional = true }
notify-rust = { version = "4.11.7", optional = true }

[profile.release]
lto = true
opt-level = "z"
strip = true
