[package]
name         = "stash-clipboard"
description  = "Wayland clipboard manager with fast persistent history and multi-media support"
version      = "0.3.5"
edition      = "2024"
authors      = [ "NotAShelf <raf@notashelf.dev>" ]
license      = "MPL-2.0"
readme       = true
repository   = "https://github.com/notashelf/stash"
rust-version = "1.91.0"

[[bin]]
name = "stash"       # actual binary name for Nix, Cargo, etc.
path = "src/main.rs"

[dependencies]
base64                = "0.22.1"
clap                  = { version = "4.5.60", features = [ "derive", "env" ] }
clap-verbosity-flag   = "3.0.4"
color-eyre            = "0.6.5"
crossterm             = "0.29.0"
ctrlc                 = "3.5.1"
dirs                  = "6.0.0"
env_logger            = "0.11.8"
humantime             = "2.3.0"
imagesize             = "0.14.0"
inquire               = { version = "0.9.4", default-features = false, features = [ "crossterm" ] }
libc                  = "0.2.182"
log                   = "0.4.29"
notify-rust           = { version = "4.12.0", optional = true }
ratatui               = "0.30.0"
regex                 = "1.12.3"
rusqlite              = { version = "0.38.0", features = [ "bundled" ] }
serde                 = { version = "1.0.228", features = [ "derive" ] }
serde_json            = "1.0.149"
smol                  = "2.0.2"
thiserror             = "2.0.18"
unicode-segmentation  = "1.12.0"
unicode-width         = "0.2.2"
wayland-client        = { version = "0.31.12", features = [ "log" ], optional = true }
wayland-protocols-wlr = { version = "0.3.10", default-features = false, optional = true }
wl-clipboard-rs       = "0.9.3"

[dev-dependencies]
tempfile = "3.26.0"

[features]
default       = [ "notifications", "use-toplevel" ]
notifications = [ "dep:notify-rust" ]
use-toplevel  = [ "dep:wayland-client", "dep:wayland-protocols-wlr" ]

[profile.release]
lto       = true
opt-level = "z"
strip     = true
